Fixed regexes further, documented lookbehind feature

--- a/prism.css
+++ b/prism.css
@@ -70,6 +70,7 @@ code.prism {
 
 .operator {
 	color: #a67f59;
+	background: hsla(0,0%,100%,.5);
 }
 
 .atrule,
